# parallel

./: .gitignore  README.md
task1/: CMakeLists.txt  doublesum.c  floatsum.c  makefile
task2/: DGEMV.c  descr.md  integral.c  makefile  sle.c
task3/: client_serv.cpp  makefile  test.cpp  thread_pool.h  vecmx.cpp
task3/example/: argsThread.cpp  async_lazy_eager.cpp  barrierWorkers.cpp  cond_var.cpp  createThread.cpp  deadlock.cpp  jthread.cpp  jthread_stop_callback.cpp  latchWorkers.cpp  lock_guard.cpp  package_task.cpp  scoped_lock.cpp  shared_mutex.cpp  signal.cpp  super_test.c  syncThreadSemaphore.cpp  task_vs_thread.cpp  thread.cpp  thread_detach.cpp  thread_local.cpp  wait_future.cpp
task4/: sensors.py
task4/Example/Asyncio/: asyncio_await.py  asyncio_gather.py  asyncio_hello.py  asyncio_io_operation.py  asyncio_task.py  asyncio_task_cancel.py  asyncio_task_return.py
task4/Example/Process/: process_hello.py  process_pipe.py  process_pool.py  process_pool_s.py  process_queue.py  process_race_con.py  process_shared_mem.py
task4/Example/Thread/: thread_NV.py  thread_barrier.py  thread_cpu_bound.py  thread_cpu_bound_numpy.py  thread_hello.py  thread_io_bound.py  thread_lock.py  thread_native_id.py  thread_queue.py  thread_race_cond.py  thread_semph.py
task5/: main.py
task5/Socket/Boot_Asio/: CMakeLists.txt  client_asio.cpp  server_asio.cpp
task5/Socket/C/: CMakeLists.txt  client.c  server.c
task5/Socket/Camera/: remote_camera_receive.py  remote_camera_transmit.py
task5/Socket/Python/: client.py  server.py
task6/: exe  laplace.nsys-rep  laplace.sqlite  laplace2d.cpp  laplace2d.h  makefile  notmakefile2.txt
task6/gpu/: jacobi.cpp  laplace2d.cpp  laplace2d.h  makefile  out.txt
task6/multi/: jacobi.cpp  laplace2d.cpp  makefile
task6/serial/: laplace2d.cpp
task7/: CMakeCache.txt  CMakeLists.txt  file.txt  jacobi.cpp  laplace2d.cpp  laplace2d.h  makefile  makefile.txt  mult.c  sup.cpp
task8/: hello  hello.cu  jacobi.cu  laplace2d.cu  laplace2d.h  main.cu  makefile
